@@ -1,3 +1,8 @@
+2005-01-26  Mark McLoughlin  <mark@skynet.ie>
+
+	* lib/util.py: pull username and homedir from
+	the passwd database if available.
+
 2005-01-25  Adam Weinberger  <adamw@gnome.org>
 
 	* configure.ac: Added en_CA to ALL_LINGUAS.
